// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`todoService addTodo 1`] = `
Array [
  "/todo",
  Object {
    "data": Object {
      "task": "Call obama",
    },
    "method": "POST",
  },
]
`;

exports[`todoService deleteTodo 1`] = `
Array [
  "/todo/uygfcvbj",
  Object {
    "data": "uygfcvbj",
    "method": "DELETE",
  },
]
`;

exports[`todoService editTodo 1`] = `
Array [
  "/todo/uygfcvbj",
  Object {
    "data": Object {
      "task": "Call trump",
    },
    "method": "PUT",
  },
]
`;

exports[`todoService getAllTodo 1`] = `
Array [
  "/todo",
  Object {
    "method": "GET",
  },
]
`;
